examples/errors/esin3.c
int main ()
{
	int e1;
	
	e1 = 0;
	
	if (e1 == 0)
		println (e1);

